--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dhirly Ramadhan</title>
+    <link rel="stylesheet" href="src/style/global.css">
+    <link rel="stylesheet" href="src/style/style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Titillium+Web:wght@200;300;400;600;700;900&display=swap');
+    </style>
+</head>
+<body>
+    <div id="app">
+        <div class="container">
 
+            <div class="intro">
+                <h1 class="logo-header">
+                    <span class="logo">D</span>
+                    <span class="logo">H</span>
+                    <span class="logo">I</span>
+                    <span class="logo">R</span>
+                    <span class="logo">L</span>
+                    <span class="logo">Y</span>
+                    <span class="logo none">.</span>
+                    <span class="logo">R</span>
+                    <span class="logo">A</span>
+                    <span class="logo">M</span>
+                    <span class="logo">A</span>
+                    <span class="logo">D</span>
+                    <span class="logo">H</span>
+                    <span class="logo">A</span>
+                    <span class="logo">N</span>
+                </h1>
+            </div>
+
+            <main id="main" class="main">
+                
+            </main>
+
+        </div>
+
+        <script src="src/script/preloader.js"></script>
+
+    </div>
+</body>
+</html>
