--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +10,10 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Titillium+Web:wght@200;300;400;600;700;900&display=swap');
     </style>
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
+
 <body>
     <div id="app">
         <div class="container">
@@ -35,13 +39,28 @@
             </div>
 
             <main id="main" class="main">
-                
+
+                <section>
+                    <div class="toggle-mode flex absolute">
+                        <span class="toggle" onclick="toggleTheme()">
+                            <span class="material-symbols-outlined">
+                                light_mode
+                            </span>
+                            <span class="material-symbols-outlined">
+                                dark_mode
+                            </span>
+                        </span>
+                    </div>
+                </section>
+
             </main>
 
         </div>
 
         <script src="src/script/preloader.js"></script>
+        <script src="src/script/themes.js"></script>
 
     </div>
 </body>
+
 </html>
