--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 
             <main id="main" class="main">
 
-                <section>
+                <section class="landing-page full-screen-height" id="landing-page">
+
                     <div class="toggle-mode flex absolute">
                         <span class="toggle" onclick="toggleTheme()">
                             <span class="material-symbols-outlined">
@@ -51,6 +52,18 @@
                             </span>
                         </span>
                     </div>
+
+                    <div class="wrapper flex center-parent">
+                        <div class="content flex column">
+                            <span class="text-title">
+                                Hi! I'm Dhirly Ramadhan,
+                            </span>
+                            <span class="text-title">
+                                a full stack developer
+                            </span>
+                        </div>
+                    </div>
+
                 </section>
 
             </main>
