--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
                     <div class="wrapper flex center-parent">
                         <div class="content flex column">
-                            <span class="text-title">
+                            <span class="text-title text-center">
                                 Hi! I'm Dhirly Ramadhan,
                             </span>
                             <span class="text-title">
