--- a/index.html
+++ b/index.html
@@ -53,15 +53,26 @@
                         </span>
                     </div>
 
-                    <div class="wrapper flex center-parent">
-                        <div class="content flex column">
-                            <span class="text-title text-center">
+                    <div class="wrapper flex center-parent column">
+                        <div class="content flex column text-center">
+                            <span class="text-title">
                                 Hi! I'm Dhirly Ramadhan,
                             </span>
                             <span class="text-title">
                                 a full stack developer
                             </span>
                         </div>
+                        <span class="content flex gap-small">
+                            <span class="bar">
+                                about me
+                            </span>
+                            <span class="bar">
+                                work
+                            </span>
+                            <span class="bar">
+                                contact
+                            </span>
+                        </span>
                     </div>
 
                 </section>
