--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         </span>
                     </div>
 
-                    <div class="wrapper flex center-parent column gap-medium">
+                    <div class="wrapper flex center-parent column gap-small">
                         <div class="content flex column text-center">
                             <span class="text-title">
                                 Hi! I'm Dhirly Ramadhan,
