--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="app">
         <div class="container">
 
-            <div class="intro">
+            <!-- <div class="intro">
                 <h1 class="logo-header">
                     <span class="logo">D</span>
                     <span class="logo">H</span>
@@ -36,7 +36,7 @@
                     <span class="logo">A</span>
                     <span class="logo">N</span>
                 </h1>
-            </div>
+            </div> -->
 
             <main id="main" class="main">
 
@@ -52,6 +52,9 @@
                             </span>
                         </span>
                     </div>
+
+                    <div class="absolute background-gradient idx1"></div>
+                    <div class="absolute background-gradient idx2"></div>
 
                     <div class="wrapper flex center-parent column gap-small">
                         <div class="content flex column text-center">
