--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="app">
         <div class="container">
 
-            <!-- <div class="intro">
+            <div class="intro">
                 <h1 class="logo-header">
                     <span class="logo">D</span>
                     <span class="logo">H</span>
@@ -36,10 +36,9 @@
                     <span class="logo">A</span>
                     <span class="logo">N</span>
                 </h1>
-            </div> -->
+            </div>
 
             <main id="main" class="main">
-
                 <section class="landing-page full-screen-height" id="landing-page">
 
                     <div class="toggle-mode flex absolute">
@@ -53,8 +52,8 @@
                         </span>
                     </div>
 
-                    <div class="absolute background-gradient idx1"></div>
-                    <div class="absolute background-gradient idx2"></div>
+                    <!-- <div class="absolute background-gradient idx1"></div>
+                    <div class="absolute background-gradient idx2"></div> -->
 
                     <div class="wrapper flex center-parent column gap-small">
                         <div class="content flex column text-center">
