--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container">
 
             <div class="intro">
-                <h1 class="logo-header">
+                <p class="logo-header">
                     <span class="logo">D</span>
                     <span class="logo">H</span>
                     <span class="logo">I</span>
@@ -35,7 +35,7 @@
                     <span class="logo">H</span>
                     <span class="logo">A</span>
                     <span class="logo">N</span>
-                </h1>
+                </p>
             </div>
 
             <main id="main" class="main">
