--- a/index.html
+++ b/index.html
@@ -24,20 +24,19 @@
             <div class="intro">
                 <p class="logo-header">
                     <span class="logo">D</span>
-                    <span class="logo">H</span>
-                    <span class="logo">I</span>
+                    <span class="logo">h</span>
+                    <span class="logo">i</span>
+                    <span class="logo">r</span>
+                    <span class="logo">l</span>
+                    <span class="logo">y</span>
                     <span class="logo">R</span>
-                    <span class="logo">L</span>
-                    <span class="logo">Y</span>
-                    <br>
-                    <span class="logo">R</span>
-                    <span class="logo">A</span>
-                    <span class="logo">M</span>
-                    <span class="logo">A</span>
-                    <span class="logo">D</span>
-                    <span class="logo">H</span>
-                    <span class="logo">A</span>
-                    <span class="logo">N</span>
+                    <span class="logo">a</span>
+                    <span class="logo">m</span>
+                    <span class="logo">a</span>
+                    <span class="logo">d</span>
+                    <span class="logo">h</span>
+                    <span class="logo">a</span>
+                    <span class="logo">n</span>
                 </p>
             </div>
 
