--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                 Hi! I'm Dhirly Ramadhan,
                             </span>
                             <span class="text-title">
-                                a full stack developer
+                                a software engineer
                             </span>
                         </div>
                         <span class="content flex gap-medium">
