--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                     <span class="logo">r</span>
                     <span class="logo">l</span>
                     <span class="logo">y</span>
+                    <span class="logo none">.</span>
                     <span class="logo">R</span>
                     <span class="logo">a</span>
                     <span class="logo">m</span>
@@ -63,7 +64,7 @@
                                 Hi! I'm Dhirly Ramadhan,
                             </span>
                             <span class="text-title">
-                                a software engineer
+                                a full stack developer
                             </span>
                         </div>
                         <span class="content flex gap-medium">
