--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@
     <link rel="stylesheet" href="src/style/global.css">
     <link rel="stylesheet" href="src/style/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Saira+Extra+Condensed:wght@700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
@@ -22,7 +19,7 @@
         <div class="container">
 
             <div class="intro">
-                <p class="logo-header">
+                <span class="logo-header">
                     <span class="logo">D</span>
                     <span class="logo">h</span>
                     <span class="logo">i</span>
@@ -38,7 +35,7 @@
                     <span class="logo">h</span>
                     <span class="logo">a</span>
                     <span class="logo">n</span>
-                </p>
+                </span>
             </div>
 
             <main id="main" class="main">
@@ -58,7 +55,7 @@
                     <!-- <div class="absolute background-gradient idx1"></div>
                     <div class="absolute background-gradient idx2"></div> -->
 
-                    <div class="wrapper flex center-parent column gap-small">
+                    <!-- <div class="wrapper flex center-parent column gap-small">
                         <div class="content flex column text-center">
                             <span class="text-title">
                                 Hi! I'm Dhirly Ramadhan,
@@ -78,7 +75,7 @@
                                 contact
                             </span>
                         </span>
-                    </div>
+                    </div> -->
 
                 </section>
 
