--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <!-- <div class="absolute background-gradient idx1"></div>
                     <div class="absolute background-gradient idx2"></div> -->
 
-                    <!-- <div class="wrapper flex center-parent column gap-small">
+                    <div class="wrapper flex center-parent column gap-small">
                         <div class="content flex column text-center">
                             <span class="text-title">
                                 Hi! I'm Dhirly Ramadhan,
@@ -64,7 +64,7 @@
                                 a full stack developer
                             </span>
                         </div>
-                        <span class="content flex gap-medium">
+                        <!-- <span class="content flex gap-medium">
                             <span class="bar">
                                 about me
                             </span>
@@ -74,8 +74,8 @@
                             <span class="bar">
                                 contact
                             </span>
-                        </span>
-                    </div> -->
+                        </span> -->
+                    </div>
 
                 </section>
 
