--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Dhirly Ramadhan</title>
     <link rel="stylesheet" href="src/style/global.css">
     <link rel="stylesheet" href="src/style/style.css">
+    <link rel="stylesheet" href="src/style/responsive.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
