--- a/index.html
+++ b/index.html
@@ -28,16 +28,14 @@
                     </div>
                 </div>
                 <div class="absolute bottom width" id="bottom-content">
-                    <div class="flex center-parent space-between padding-medium">
+                    <div class="flex center-parent padding-medium">
                         <div class="text-small">
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit.<br>Provident, sed?
                         </div>
-                        <div class="absolute center-children">
-                            <div class="circle border flex center-parent" id="scroll-down">
-                                <span class="material-symbols-outlined">
-                                    south
-                                </span>
-                            </div>
+                        <div class="circle border flex center-parent" id="scroll-down">
+                            <span class="material-symbols-outlined">
+                                south
+                            </span>
                         </div>
                         <div class="text-small flex center-parent">
                             <span class="material-symbols-outlined">
