--- a/index.html
+++ b/index.html
@@ -65,7 +65,50 @@
                 </div>
             </nav>
 
-            <section class="landing-page wide-screen-height" id="landing-page"></section>
+            <section class="landing-page wide-screen-height" id="landing-page">
+                <div class="padding-medium wrapper flex">
+                    <!-- <div class="flex-1 flex">
+                        <div class="flex column gap-small center-parent" id="navigation-dots">
+                            <a href="">
+                                <div class="dots circle"></div>
+                            </a>
+                            <a href="">
+                                <div class="dots circle"></div>
+                            </a>
+                            <a href="">
+                                <div class="dots circle"></div>
+                            </a>
+                            <a href="">
+                                <div class="dots circle"></div>
+                            </a>
+                        </div>
+                    </div> -->
+                    <div class="flex-1 flex center-parent">
+                        <div class="flex gap-small text-center column center-align-parent gap-medium">
+                            <div class="text-title">
+                                Hello World! I'm Dhirly Ramadhan,<br class="responsive-none">
+                                -- learning to be a software engineer
+                            </div>
+                            <a href="">
+                                <div class="button mail text-center center-parent flex gap-small" id="mail">
+                                    Get in Touch
+                                    <span class="material-symbols-outlined">
+                                        arrow_forward
+                                    </span>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="photos-screen padding-medium" id="photos-screen">
+                <div class="wrapper flex gap-small row-responsive">
+                    <div class="flex-1 photos"></div>
+                    <div class="flex-1 photos"></div>
+                    <div class="flex-1 photos"></div>
+                </div>
+            </section>
 
         </div>
 
