--- a/index.html
+++ b/index.html
@@ -49,10 +49,19 @@
 
             <nav class="nav flex gap-medium width justify-content-end padding-medium" id="nav">
                 <div class="menu-toggle absolute" id="menu-toggle">
-                    <div class="padding-medium">
+                    <div class="padding-medium flex gap-medium">
                         <span class="material-symbols-outlined">
                             menu
                         </span>
+                        <!-- <span>
+                            about me
+                        </span> 
+                        <span>
+                            work
+                        </span>
+                        <span>
+                            contact
+                        </span> -->
                     </div>
                 </div>
                 <div class="flex gap padding-small" id="themes-mode" onclick="toggleTheme()">
@@ -90,9 +99,9 @@
                                 -- learning to be a software engineer
                             </div>
                             <a href="">
-                                <div class="button mail text-center center-parent flex gap-small" id="mail">
+                                <div class="button mail text-center center-parent flex gap-small text-color-gradient" id="mail">
                                     Get in Touch
-                                    <span class="material-symbols-outlined">
+                                    <span class="material-symbols-outlined text-color-gradient">
                                         arrow_forward
                                     </span>
                                 </div>
@@ -106,9 +115,17 @@
                 <div class="wrapper flex gap-small row-responsive">
                     <div class="flex-1 photos"></div>
                     <div class="flex-1 photos"></div>
-                    <div class="flex-1 photos"></div>
+                    <!-- <div class="flex-1 photos"></div> -->
                 </div>
             </section>
+
+            <!-- <footer class="footer absolute" id="footer">
+                <div class="wrapper flex">
+                    <div class="text-full-screen">
+                        craftwork
+                    </div>
+                </div>
+            </footer> -->
 
         </div>
 
