--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
                                 -- learning to be a software engineer
                             </div>
                             <a href="">
-                                <div class="button mail text-center center-parent flex gap-small text-color-gradient" id="mail">
+                                <div class="button mail text-center center-parent flex gap-small" id="mail">
                                     Get in Touch
-                                    <span class="material-symbols-outlined text-color-gradient">
+                                    <span class="material-symbols-outlined">
                                         arrow_forward
                                     </span>
                                 </div>
@@ -119,13 +119,13 @@
                 </div>
             </section>
 
-            <!-- <footer class="footer absolute" id="footer">
-                <div class="wrapper flex">
-                    <div class="text-full-screen">
+            <footer class="footer full-screen-height" id="footer">
+                <div class="wrapper flex end-align-parent">
+                    <div class="text-full-screen absolute">
                         craftwork
                     </div>
                 </div>
-            </footer> -->
+            </footer>
 
         </div>
 
