--- a/index.html
+++ b/index.html
@@ -7,12 +7,9 @@
     <title>Dhirly Ramadhan</title>
     <link rel="stylesheet" href="src/style/global.css">
     <link rel="stylesheet" href="src/style/style.css">
-    <link rel="stylesheet" href="src/style/responsive.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="src/style/responsive.css"><link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
@@ -53,15 +50,9 @@
                         <span class="material-symbols-outlined">
                             menu
                         </span>
-                        <!-- <span>
-                            about me
-                        </span> 
-                        <span>
-                            work
-                        </span>
                         <span>
                             contact
-                        </span> -->
+                        </span>
                     </div>
                 </div>
                 <div class="flex gap padding-small" id="themes-mode" onclick="toggleTheme()">
@@ -74,58 +65,28 @@
                 </div>
             </nav>
 
-            <section class="landing-page wide-screen-height" id="landing-page">
-                <div class="padding-medium wrapper flex">
-                    <!-- <div class="flex-1 flex">
-                        <div class="flex column gap-small center-parent" id="navigation-dots">
-                            <a href="">
-                                <div class="dots circle"></div>
-                            </a>
-                            <a href="">
-                                <div class="dots circle"></div>
-                            </a>
-                            <a href="">
-                                <div class="dots circle"></div>
-                            </a>
-                            <a href="">
-                                <div class="dots circle"></div>
-                            </a>
-                        </div>
-                    </div> -->
-                    <div class="flex-1 flex center-parent">
-                        <div class="flex gap-small text-center column center-align-parent gap-medium">
-                            <div class="text-title">
-                                Hello World! I'm Dhirly Ramadhan,<br class="responsive-none">
-                                -- learning to be a software engineer
-                            </div>
-                            <a href="">
-                                <div class="button mail text-center center-parent flex gap-small" id="mail">
-                                    Get in Touch
-                                    <span class="material-symbols-outlined">
-                                        arrow_forward
-                                    </span>
-                                </div>
-                            </a>
-                        </div>
+            <section class="landing-page full-screen-height" id="landing-page">
+                <span class="absolute center-children" id="object">
+                    <img src="src/assets/5.png" width="250px" alt="" srcset="">
+                </span>
+                <div class="wrapper flex center-parent">
+                    <div class="flex column gap-medium">
+                        <span class="text-small text-center absolute width">
+                            Hello World! I'm a
+                        </span>
+                        <span class="flex column text-center gap-minus">
+                            <span class="text-typhograpy text-center">
+                                software
+                            </span>
+                            <span class="text-typhograpy text-center">
+                                engineer
+                            </span>
+                        </span>
                     </div>
                 </div>
             </section>
 
-            <section class="photos-screen padding-medium" id="photos-screen">
-                <div class="wrapper flex gap-small row-responsive">
-                    <div class="flex-1 photos"></div>
-                    <div class="flex-1 photos"></div>
-                    <!-- <div class="flex-1 photos"></div> -->
-                </div>
-            </section>
-
-            <footer class="footer full-screen-height" id="footer">
-                <div class="wrapper flex end-align-parent">
-                    <div class="text-full-screen absolute">
-                        craftwork
-                    </div>
-                </div>
-            </footer>
+            <div class="full-screen-height"></div>
 
         </div>
 
