--- a/index.html
+++ b/index.html
@@ -7,21 +7,25 @@
     <title>Dhirly Ramadhan</title>
     <link rel="stylesheet" href="src/style/global.css">
     <link rel="stylesheet" href="src/style/style.css">
+    <link rel="stylesheet" href="src/style/cursor.css">
     <link rel="stylesheet" href="src/style/responsive.css"><link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="shortcut icon" href="src/assets/3.png" type="image/x-icon">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/gsap.min.js"></script>
 </head>
 
 <body>
     <div id="app">
         <div class="container">
 
+            <div class="cursor hidden"></div>
+
             <section class="preloader full-screen-height" id="preloader">
                 <div class="wrapper padding-medium flex">
-                    <div class="center-children text-title absolute flex center-parent" id="preloader-title">
+                    <div class="center-children text-title absolute flex center-parent cursor-scale" id="preloader-title">
                         Dhirly Ramadhan
                     </div>
                 </div>
@@ -72,14 +76,14 @@
                 </span>
                 <div class="wrapper flex center-parent">
                     <div class="flex column gap-medium">
-                        <span class="text-small text-center absolute width">
+                        <span class="text-small text-center absolute width cursor-scale small">
                             Hello World! I'm a
                         </span>
                         <span class="flex column text-center gap-minus">
-                            <span class="text-typhograpy text-center">
+                            <span class="text-typhograpy text-center cursor-scale">
                                 software
                             </span>
-                            <span class="text-typhograpy text-center">
+                            <span class="text-typhograpy text-center cursor-scale">
                                 engineer
                             </span>
                         </span>
@@ -95,6 +99,7 @@
         <script src="src/script/preloader.js"></script>
         <script src="src/script/navbar.js"></script>
         <script src="src/script/index.js"></script>
+        <script src="src/script/cursor.js"></script>
 
     </div>
 </body>
