--- a/index.html
+++ b/index.html
@@ -21,13 +21,11 @@
     <div id="app">
         <div class="container">
 
-            <div class="cursor hidden"></div>
-
             <section class="preloader full-screen-height" id="preloader">
                 <div class="wrapper padding-medium flex">
-                    <div class="center-children text-title absolute flex center-parent cursor-scale" id="preloader-title">
+                    <span class="center-children text-title absolute flex center-parent cursor-scale" id="preloader-title">
                         Dhirly Ramadhan
-                    </div>
+                    </span>
                 </div>
                 <div class="absolute bottom width" id="bottom-content">
                     <div class="flex center-parent padding-medium">
@@ -71,7 +69,7 @@
             </nav>
 
             <section class="landing-page full-screen-height" id="landing-page">
-                <span class="absolute center-children" id="object">
+                <span class="absolute center-children cursor-scale" id="object">
                     <img src="src/assets/5.png" width="250px" alt="" srcset="">
                 </span>
                 <div class="wrapper flex center-parent">
@@ -92,6 +90,8 @@
             </section>
 
             <div class="full-screen-height"></div>
+
+            <span class="cursor hidden"></span>
 
         </div>
 
