--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
             <div class="full-screen-height"></div>
 
-            <span class="cursor hidden"></span>
+            <span class="cursor hidden" id="sender-cursor"></span>
 
         </div>
 
