--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="src/style/global.css">
     <link rel="stylesheet" href="src/style/style.css">
     <link rel="stylesheet" href="src/style/cursor.css">
-    <link rel="stylesheet" href="src/style/responsive.css"><link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="src/style/responsive.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="shortcut icon" href="src/assets/3.png" type="image/x-icon">
+    <link rel="shortcut icon" href="src/assets/6.png" type="image/x-icon">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/gsap.min.js"></script>
 </head>
 
@@ -58,11 +59,11 @@
                         </span>
                     </div>
                 </div>
-                <div class="flex gap padding-small" id="themes-mode" onclick="toggleTheme()">
-                    <span class="material-symbols-outlined">
+                <div title="" class="flex gap padding-small" id="themes-mode">
+                    <span class="material-symbols-outlined" onclick="setTheme('light')">
                         light_mode
                     </span>
-                    <span class="material-symbols-outlined">
+                    <span class="material-symbols-outlined" onclick="setTheme('dark')">
                         dark_mode
                     </span>
                 </div>
@@ -74,8 +75,10 @@
                 </span>
                 <div class="wrapper flex center-parent">
                     <div class="flex column gap-medium">
-                        <span class="text-small text-center absolute width cursor-scale small">
-                            Hello World! I'm a
+                        <span class="text-small text-center absolute width">
+                            <span class="cursor-scale small">
+                                Hello World! I'm a
+                            </span>
                         </span>
                         <span class="flex column text-center gap-minus">
                             <span class="text-typhograpy text-center cursor-scale">
