--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="src/style/responsive.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Sofia+Sans+Extra+Condensed&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Sofia+Sans+Extra+Condensed&display=swap"
+        rel="stylesheet">
     <!-- <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet"> -->
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -25,7 +27,8 @@
 
             <section class="preloader full-screen-height" id="preloader">
                 <div class="wrapper padding-medium flex">
-                    <span class="center-children text-title absolute flex center-parent cursor-scale" id="preloader-title">
+                    <span class="center-children text-title absolute flex center-parent cursor-scale"
+                        id="preloader-title">
                         Dhirly Ramadhan
                     </span>
                 </div>
@@ -88,6 +91,18 @@
                             <span class="text-typhograpy text-center cursor-scale">
                                 engineer
                             </span>
+                        </span>
+                    </div>
+                </div>
+            </section>
+
+            <section class="about-me-page wide-screen-height width" id="about-me">
+                <div class="padding-medium flex">
+                    <div class="width flex center-parent">
+                        <span class="paragraph large">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, asperiores expedita corrupti
+                            blanditiis quibusdam voluptatum, ipsa ex ut laudantium nesciunt quisquam aspernatur aliquid quis
+                            non doloremque id nobis dignissimos reprehenderit?
                         </span>
                     </div>
                 </div>
