--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
             </section>
 
             <section class="about-me-page wide-screen-height width" id="about-me">
-                <div class="padding-medium flex">
+                <div class="flex padding-medium column gap-extra-large">
                     <div class="width flex center-parent">
                         <span class="paragraph large">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, asperiores expedita corrupti
-                            blanditiis quibusdam voluptatum, ipsa ex ut laudantium nesciunt quisquam aspernatur aliquid quis
-                            non doloremque id nobis dignissimos reprehenderit?
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora rem inventore minima fuga
+                            beatae deserunt harum maiores consequatur culpa totam.
                         </span>
                     </div>
+                    <span class="banner center-x width inverse-background"></span>
                 </div>
             </section>
 
