--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
             <section class="about-me-page wide-screen-height width" id="about-me">
                 <div class="flex padding-medium column gap-extra-large">
                     <div class="width flex center-parent">
-                        <span class="paragraph large">
+                        <!-- <span class="paragraph large">
                             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora rem inventore minima fuga
                             beatae deserunt harum maiores consequatur culpa totam.
-                        </span>
+                        </span> -->
                     </div>
                     <span class="banner center-x width inverse-background"></span>
                 </div>
