--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dhirly Ramadhan</title>
+    <link rel="shortcut icon" href="src/assets/6.png" type="image/x-icon">
     <link rel="stylesheet" href="src/style/cursor.css">
     <link rel="stylesheet" href="src/style/global.css">
     <link rel="stylesheet" href="src/style/responsive.css">
